--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ build/
 venv/
 env/
 .env
+.env.local
 
 # IDE
 .idea/
@@ -20,7 +21,12 @@ env/
 *.swo
 .DS_Store
 
-# Data files (optional - comment out if you want to include)
-# *.json
-# *.txt
+# Vercel
+.vercel/
+
+# Node (if using frontend later)
+node_modules/
+
+# Local output (optional - large files)
+# examples/output/*.json
 
