--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ requests>=2.28.0
 fastapi>=0.100.0
 uvicorn>=0.22.0
 
+# YouTube transcript
+youtube-transcript-api>=0.6.0
+
 # Data analysis (for examples)
 numpy>=1.24.0
 scipy>=1.10.0
