--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ requests>=2.28.0
 fastapi>=0.100.0
 uvicorn>=0.22.0
 
-# YouTube transcript
-youtube-transcript-api>=0.6.0
+# YouTube audio download
+yt-dlp>=2024.0.0
+
+# OpenAI API for transcription
+openai>=1.0.0
 
 # Data analysis (for examples)
 numpy>=1.24.0
