--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,7 @@
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
   "framework": null,
-  "installCommand": "cd frontend && npm install"
+  "installCommand": "cd frontend && npm install",
+  "ignoreCommand": "exit 0",
+  "functions": {}
 }
