fix: Remove empty functions field from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,5 @@
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/dist",
   "framework": null,
-  "installCommand": "cd frontend && npm install",
-  "ignoreCommand": "exit 0",
-  "functions": {}
+  "installCommand": "cd frontend && npm install"
 }
