--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ yt-dlp>=2024.0.0
 # OpenAI API for transcription
 openai>=1.0.0
 
+# Google Cloud authentication for NotebookLM
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+
 # Data analysis (for examples)
 numpy>=1.24.0
 scipy>=1.10.0
