feat: Improve service account auth with file path support
- Support GOOGLE_APPLICATION_CREDENTIALS file path
- Support GOOGLE_SERVICE_ACCOUNT_JSON JSON string
- Fall back to GCP metadata service
- Add service account key files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ node_modules/
 # Local output (optional - large files)
 # examples/output/*.json
 
+# Service account keys (sensitive)
+*-*.json
+*service-account*.json
+*credentials*.json
+
